--- a/BookSearch/packages.config
+++ b/BookSearch/packages.config
@@ -6,4 +6,5 @@
   <package id="MaterialDesignThemes" version="4.6.1" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.2.5" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
 </packages>
