--- a/BookSearch/BookSearch.csproj
+++ b/BookSearch/BookSearch.csproj
@@ -88,6 +88,11 @@
     <Compile Include="HistoryWindow.xaml.cs">
       <DependentUpon>HistoryWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="infosys202215DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>infosys202215DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="RakutenApi.cs" />
     <Compile Include="SearchConnect.cs" />
     <Compile Include="SearchResult.xaml.cs">
@@ -157,6 +162,17 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="infosys202215DataSet.xsc">
+      <DependentUpon>infosys202215DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="infosys202215DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>infosys202215DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="infosys202215DataSet.xss">
+      <DependentUpon>infosys202215DataSet.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -168,6 +184,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="me.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="nekotohon.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets')" />
