--- a/BookSearch/BookSearch.csproj
+++ b/BookSearch/BookSearch.csproj
@@ -93,6 +93,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>infosys202215DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="infosys202215DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>infosys202215DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="infosys202215DataSet2.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -193,6 +198,17 @@
     <None Include="infosys202215DataSet.xss">
       <DependentUpon>infosys202215DataSet.xsd</DependentUpon>
     </None>
+    <None Include="infosys202215DataSet1.xsc">
+      <DependentUpon>infosys202215DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="infosys202215DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>infosys202215DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="infosys202215DataSet1.xss">
+      <DependentUpon>infosys202215DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="infosys202215DataSet2.xsc">
       <DependentUpon>infosys202215DataSet2.xsd</DependentUpon>
     </None>
@@ -231,6 +247,9 @@
     <Resource Include="nekotohon.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="migi2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets')" />
