--- a/BookSearch/BookSearch.csproj
+++ b/BookSearch/BookSearch.csproj
@@ -251,6 +251,9 @@
   <ItemGroup>
     <Resource Include="migi2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="tosyokan.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
